# firework

./: .gitignore  README.md  pyproject.toml
src/: main.py  main_cli.py
