# Ref: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "firework"
version = "0.1.3"
description = "A incremental game used to learn Python FastAPI and Async programming."

# repository = "..."

classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
 
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["build", "uvicorn", "fastapi"]


[project.scripts]
fireworks = "src:main_cli"

[project.gui-scripts]
fireworks = "src:main_gui"

[project.optional-dependencies]
cli = [
  "rich",
  "click"
]
gui = [
  "PySide6"
]

# dev = [""]
test = ["pytest"]

[build-system]
# Defaults
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
